fixed z-index for the alerts to put it on the front

--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -8,6 +8,7 @@
   text-align: center;
   color: white;
   border: none;
+  z-index: 6;
 }
 .alert-info {
   background: $brand-green;
